--- a/credits.html
+++ b/credits.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#CCCCCC"/>
 	<meta property="og:image" content="/icon_maskable_192.png" />
-	<meta name="description" content="UltraBox is a mod of BeepBox that aims to combine every other beepmod into one." />
-    <title>UltraBox Credits</title>
+	<meta name="description" content="RolyBox is a Beepbox fork for creating and sharing new features." />
+    <title>RolyBox Credits</title>
     <style type="text/css">
 
         html {
@@ -59,10 +59,8 @@
   
 <h1>
 <font color="#FF8EC5">Credits</font>
-<h3>Thanks to Main, LeoV, Neptendo, Mid, choptop84, and Slarmoo for various coding-related contributions</h3>
-<h3>Thanks to pixelzwithaz for making the current UltraBox logo</h3>
-<h3>Thanks to becuzwhynot for the help in making the Azur Lane theme</h3>
-<h3>Thanks to various community members for helping us <a href="https://ultraabox.github.io/testing">test</a> UB</h3>
+<h3>Various edits on top of Ultrabox by ThinkAndWander.</h3>
+<h3>Thanks to Main, LeoV, Neptendo, Mid, choptop84, Slarmoo, pixelzwithaz, becuzwhynot, <a href="https://ultraabox.github.io/testing">et al.</a> for contributing to Ultrabox which is is forked from.</h3>
 </h1>
 
 <h1>
@@ -208,6 +206,10 @@
 <h2>UltraBox</h2>
 <h3>Idea by Neptendo with coding help from Main and other community members</h3>
 <p><a href="https://ultraabox.github.io">https://ultraabox.github.io</a></p>
-	
+
+<h2>RolyBox</h2>
+<h3>Started by ThinkAndWander, based on UltraBox.</h3>
+<p><a href="https://thinkandwander.github.io/Rolybox">https://thinkandwander.github.io/Rolybox</a></p>
+
 </body>
 </html>
