--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UltraBox-Roly fork</title>
-    <meta name="application-name" content="UltraBox" />
-    <meta name="apple-mobile-web-app-title" content="UltraBox">
-    <meta name="description" content="UltraBox is a mod of BeepBox that aims to combine every other beepmod into one." />
+    <title>RolyBox</title>
+    <meta name="application-name" content="RolyBox" />
+    <meta name="apple-mobile-web-app-title" content="RolyBox">
+    <meta name="description" content="RolyBox is a Beepbox fork for creating and sharing new features." />
     <meta name="keywords" content="chiptune, instrumental, music, song, melody, composition, tool, free, online, square wave, NES, NSF, ultrabox, beepbox, jummbox, pandorasbox, modbox, sandbox, goldbox, wackybox, todbox" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -64,8 +64,6 @@
             padding-left: 30px;
             padding-right: 30px;
         }
-
-        #Hotdog { display: none; }
 
         h1 {
             font-size: 1.7rem;
@@ -166,43 +164,24 @@
     </script>
     <div id="beepboxEditorContainer">
         <noscript>
-            Sorry, UltraBox requires a JavaScript-enabled browser.
+            Sorry, RolyBox requires a JavaScript-enabled browser.
         </noscript>
     </div>
     <div id="text-content">
         <section>
 
             <h1>
-                <font>UltraBox</font>
+                <span>RolyBox</span>
                 <span id="goldboxPlant" style="display: inline; color:#62a13b"></span>
                 <!-- <span id="goldboxPlant" style="display: inline; color: var(--plant-color, var(--link-accent, #62a13b));"></span> -->
             </h1>
             
             <p id="introduction">
-                UltraBox is a mod first envisioned by Neptendo and made possible by contributing community members (see <a href="./credits.html">credits</a>).<br>
-                It takes elements from most of the beepbox mods available and puts them in one convenient package.
+                RolyBox is a fork of Ultrabox, intended as a staging ground for new changes to strengthen the feature set of the program. Changes will be redistributed in PR commits to other major boxes.
             </p>
-            <!-- <p>
-                All song data is contained in the URL at the top of your browser.
-                When you make changes to the song, the URL is updated to reflect your changes.
-                When you are satisfied with your song, just copy and paste the URL to save and share your song!
-            </p> -->
             <p>
                 If you have any questions, please visit the <a href="./faq.html">FAQ</a>. Visit the <a href="./patch_notes.html">patch notes</a> to see the latest changes made.
-                <img id="Hotdog" src="" width="500" height="333" onclick="changeHotdogSize()" />
             </p>
-            <!--
-    <div class="donation">
-        BeepBox is a passion project, and will always be free to use. If you find it valuable and have the means, any gratuity via
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-            <input type="hidden" name="cmd" value="_donations" />
-            <input type="hidden" name="business" value="QZJTX9GRYEV9N" />
-            <input type="hidden" name="currency_code" value="USD" />
-            <input type="submit" name="submit" value="Paypal"/>
-        </form>
-        would be appreciated!
-    </div>
-    -->
         </section>
 
         <div class="column-container">
@@ -213,7 +192,7 @@
                     </h2>
                     <p>
                         You can add or remove notes by clicking on the gray rows at the top.
-                        UltraBox automatically plays the notes out loud for you. Try it!
+                        RolyBox automatically plays the notes out loud for you. Try it!
 		
                     </p>
                     <p>
@@ -224,7 +203,7 @@
                         </span>
                     </p>
                     <p>
-                        UltraBox can play several rows of patterns simultaneously, and each row has its own set of patterns.
+                        RolyBox can play several rows of patterns simultaneously, and each row has its own set of patterns.
                         Most rows can play melodies or harmonies, but the bottom row is for drums.
                     </p>
                     <p>
@@ -235,7 +214,7 @@
 
                     <div id="keyboard-instructions">
                         <p>
-                            When UltraBox has focus (click on its interface above), you can use these keyboard shortcuts: <br />
+                            When RolyBox has focus (click on its interface above), you can use these keyboard shortcuts: <br />
                         </p>
                         <ul>
                             <li><b>Spacebar</b>: play or pause the song</li>
@@ -249,7 +228,7 @@
 							<li><b>[ ]</b>: move playhead backward or forward</li>
 							<li><b>F/H</b>: move to First or Highlighted pattern </li>
 							<li><b>Shift & Drag</b>: select part of a pattern</li>
-							<li>These are just a few shortcuts, check UltraBox's edit menu for more!</li>
+							<li>These are just a few shortcuts, check RolyBox's edit menu for more!</li>
                             <!-- need to edit this eventually -->
                         </ul>
                     </div>
@@ -270,7 +249,7 @@
 
                     </p>
                     <p>
-                        UltraBox has many more features.
+                        RolyBox has many more features.
                         Try playing with the buttons and menus on the right side to find out what it can do!
                         You can also click on the label next to each option for a description of what it does.
                         Some features are hard to find anywhere though - for example, if your song has any modulator channels, you can hold Ctrl or Shift while the song is playing to record the movement of sliders directly! If you want to learn more tips, tricks, and best practices though, see below.
@@ -360,18 +339,11 @@
             document.getElementById("goldboxPlant").innerHTML = "  🎂🎉";  
         }
 
-        function changeHotdogSize() {
-            var image = document.getElementById('Hotdog');
-            image.width = Math.random() * (750 - 20) + 20;
-            image.height = Math.random() * (499 - 20) + 20;
-        }
-
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini|android|ipad|playbook|silk/i.test(navigator.userAgent)) {
-            document.getElementById("introduction").innerHTML = "UltraBox is an online tool for sketching and sharing chiptune melodies. Make sure that your volume is turned up, then press the play button!";
+            document.getElementById("introduction").innerHTML = "RolyBox is an online tool for sketching and sharing chiptune melodies. Make sure that your volume is turned up, then press the play button!";
             document.getElementById("keyboard-instructions").style.display = "none";
             document.getElementById("mobile-instructions").style.display = "";
             document.getElementById("bar-editing").innerHTML = "Tap the boxes to move to a different part of the song, or tap on the currently selected box to swap which pattern is played during that part of the song.";
-			//document.getElementById("offline-instructions").innerHTML = 'You can use UltraBox when your device is offline if you put a shortcut to UltraBox on your home screen. <ul><li>Chrome: find the "Add to Home Screen" option in the ⋮ menu.</li><li>Firefox: find the "Add Page Shortcut" option in the ⋮ menu.</li><li>Safari: find the "Add to Home Screen" option in the bookmark menu.</li></ul>';
         }
 
         function browserHasRequiredFeatures() {
@@ -398,18 +370,8 @@
             fileref.setAttribute("src", "beepbox_editor.min.js");
             document.head.appendChild(fileref);
         } else {
-            document.getElementById("beepboxEditorContainer").innerHTML = "Sorry, UltraBox doesn't support your browser. Try a recent version of Chrome, Firefox, Edge, Safari, or Opera.";
+            document.getElementById("beepboxEditorContainer").innerHTML = "Sorry, RolyBox doesn't support your browser. Try a recent version of Chrome, Firefox, Edge, Safari, or Opera.";
         }
-
-		// If the page was loaded with an old song version that old versions of BeepBox support,
-		// update the links to the old versions so that they'll open the song.
-	    //HEY, ULTRABOX DOESN'T HAVE THESE, WHAT DO WE DO????
-		if (/^#[1-6]/.test(location.hash)) {
-			document.getElementById("linkTo2_3").href += location.hash;
-		}
-		if (/^#[1-8]/.test(location.hash)) {
-			document.getElementById("linkTo3_0").href += location.hash;
-		}
     </script>
 </body>
 </html>
