--- a/offline/index.html
+++ b/offline/index.html
@@ -8,10 +8,10 @@
     <script src="select2.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UltraBox</title>
-    <meta name="application-name" content="UltraBox" />
-    <meta name="apple-mobile-web-app-title" content="UltraBox">
-    <meta name="description" content="UltraBox is a mod of BeepBox that aims to combine every other beepmod into one." />
+    <title>RolyBox</title>
+    <meta name="application-name" content="RolyBox" />
+    <meta name="apple-mobile-web-app-title" content="RolyBox">
+    <meta name="description" content="RolyBox is a mod of BeepBox that aims to combine every other beepmod into one." />
     <meta name="keywords" content="chiptune, instrumental, music, song, melody, composition, tool, free, online, square wave, NES, NSF, ultrabox, beepbox, jummbox, pandorasbox, modbox, sandbox, goldbox, wackybox, todbox" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -69,8 +69,6 @@
             padding-left: 30px;
             padding-right: 30px;
         }
-
-        #Hotdog { display: none; }
 
         h1 {
             font-size: 1.7rem;
@@ -166,23 +164,22 @@
     </script>
     <div id="beepboxEditorContainer">
         <noscript>
-            Sorry, UltraBox requires a JavaScript-enabled browser.
+            Sorry, RolyBox requires a JavaScript-enabled browser.
         </noscript>
     </div>
     <div id="text-content">
         <section>
 
             <h1>
-                <font>UltraBox</font>
+                <span>RolyBox</span>
                 <span id="goldboxPlant" style="display: inline; color:#62a13b"></span>
             </h1>
 
             <p id="introduction">
-                This is the offline version of UltraBox.<br>
+                This is the offline version of RolyBox.<br>
                 You can load samples by dropping them into the <code>samples</code> folder, and then inputting eg. <code>file:samples/sample1.wav</code>
                 <br>You can also load samples from websites if you're connected to the internet.
             </p>
-            <img id="Hotdog" src="" width="500" height="333" onclick="changeHotdogSize()" />
     </div>
 
     <!--
@@ -229,14 +226,8 @@
             document.getElementById("goldboxPlant").innerHTML = "  🎂🎉";  
         }
 
-        function changeHotdogSize() {
-            var image = document.getElementById('Hotdog');
-            image.width = Math.random() * (750 - 20) + 20;
-            image.height = Math.random() * (499 - 20) + 20;
-        }
-
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini|android|ipad|playbook|silk/i.test(navigator.userAgent)) {
-            document.getElementById("introduction").innerHTML = "UltraBox is an online tool for sketching and sharing chiptune melodies. Make sure that your volume is turned up, then press the play button!";
+            document.getElementById("introduction").innerHTML = "RolyBox is an online tool for sketching and sharing chiptune melodies. Make sure that your volume is turned up, then press the play button!";
             document.getElementById("keyboard-instructions").style.display = "none";
             document.getElementById("mobile-instructions").style.display = "";
             document.getElementById("bar-editing").innerHTML = "Tap the boxes to move to a different part of the song, or tap on the currently selected box to swap which pattern is played during that part of the song.";
@@ -267,18 +258,8 @@
             fileref.setAttribute("src", "beepbox_editor.min.js");
             document.head.appendChild(fileref);
         } else {
-            document.getElementById("beepboxEditorContainer").innerHTML = "Sorry, UltraBox doesn't support your browser. Try a recent version of Chrome, Firefox, Edge, Safari, or Opera.";
+            document.getElementById("beepboxEditorContainer").innerHTML = "Sorry, RolyBox doesn't support your browser. Try a recent version of Chrome, Firefox, Edge, Safari, or Opera.";
         }
-
-		// If the page was loaded with an old song version that old versions of BeepBox support,
-		// update the links to the old versions so that they'll open the song.
-	    //HEY, ULTRABOX DOESN'T HAVE THESE, WHAT DO WE DO????
-		if (/^#[1-6]/.test(location.hash)) {
-			document.getElementById("linkTo2_3").href += location.hash;
-		}
-		if (/^#[1-8]/.test(location.hash)) {
-			document.getElementById("linkTo3_0").href += location.hash;
-		}
     </script>
 </body>
 </html>
