--- a/player/index.html
+++ b/player/index.html
@@ -4,8 +4,8 @@
 	<link rel="icon" type="image/x-icon" href="../favicon.ico" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>UltraBox Song Player</title> 
-	<meta name="description" content="UltraBox is a mod of BeepBox that aims to combine every other beepmod into one." />
+	<title>RolyBox Song Player</title> 
+	<meta name="description" content="RolyBox is a Beepbox fork for creating and sharing new features." />
 	<meta name="keywords" content="chiptune, instrumental, music, melody, composition, tool, square wave, NES, NSF, BeepBox" />
 	<meta name="theme-color" content="#CCCCCC"/>
 	<meta property="og:image" content="../icon_maskable_192.png" />
