--- a/synth_example.html
+++ b/synth_example.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
-		<title>UltraBox Synth Example</title>
+		<title>RolyBox Synth Example</title>
 		<meta name="robots" content="noindex, nofollow" />
 	</head>
 	<body>
