--- a/ultrabox_offline_template.html
+++ b/ultrabox_offline_template.html
@@ -16,10 +16,10 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UltraBox</title>
-    <meta name="application-name" content="UltraBox" />
-    <meta name="apple-mobile-web-app-title" content="UltraBox">
-    <meta name="description" content="UltraBox is a mod of BeepBox that aims to combine every other beepmod into one." />
+    <title>RolyBox</title>
+    <meta name="application-name" content="RolyBox" />
+    <meta name="apple-mobile-web-app-title" content="RolyBox">
+    <meta name="description" content="RolyBox is a Beepbox fork for creating and sharing new features." />
     <meta name="keywords" content="chiptune, instrumental, music, song, melody, composition, tool, free, online, square wave, NES, NSF, ultrabox, beepbox, jummbox, pandorasbox, modbox, sandbox, goldbox, wackybox, todbox" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -173,14 +173,14 @@
     </script>
     <div id="beepboxEditorContainer">
         <noscript>
-            Sorry, UltraBox requires a JavaScript-enabled browser.
+            Sorry, RolyBox requires a JavaScript-enabled browser.
         </noscript>
     </div>
     <div id="text-content">
         <section>
 
             <h1>
-                <font>UltraBox</font>
+                <span>RolyBox</span>
                 <span id="goldboxPlant" style="display: inline; color:#62a13b"></span>
             </h1>
 
